@@ -3,7 +3,9 @@
 |               PENDING - WORK IN PROGRESS                  |
 |                                                           |
  ===========================================================
-voir patch sergame benigno
+
+son sur FICS qd busy
+
  ===========================================================
 |                                                           |
 |                          BUGS                             |
