@@ -793,6 +793,9 @@ scid-3.7.4
 - Fixes :
   * serious game play when use book is checked and book name is empty leads to crash (thanks to Benigno Hernández)
   * Check for engines allowed in eMail games caused an exception (noENG not set)
+  * Internet play (FICS) : the first offer not displayed on the graph
+  * Sound : when another application uses the sound device and once it is released, forces Scid to reset pending sounds hence be able to use sounds again (this has the drawback of limiting maximum sound length to 5 seconds)
+  * Move annoucement : if pieces are translated, announces moves using english sounds (as only english annoucements are supported)
 - Features
   * NAG support : add symbolic NAGs using UTF-8 symbols
   * Search position : if the search is done in a refrerence base (not the current one), don't switch to it if the result returns no gme
